refactor: mimic walls